--- a/Tyuiu.SmirnovIA.Sprint6.Task2.V28/Form1.resx
+++ b/Tyuiu.SmirnovIA.Sprint6.Task2.V28/Form1.resx
@@ -123,6 +123,12 @@
   <metadata name="FfromX.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="X.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="FfromX.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="textBoxTask_SIA.Text" xml:space="preserve">
     <value>Написать программму, которая выводит таблицу значений функции:
              sin(x) - 2x
